--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "db:migrate": "dotenv -e .env.development.local npx prisma migrate dev",
+    "db:push": "dotenv -e .env.development.local npx prisma db push",
+    "db:studio": "dotenv -e .env.development.local npx prisma studio"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "4.13.0",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -19,6 +23,7 @@
   "devDependencies": {
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
+    "prisma": "4.13.0",
     "typescript": "4.5.5"
   }
 }
